graphic design logo

--- a/main.css
+++ b/main.css
@@ -49,18 +49,18 @@ padding-left: 39%;
 }
 
 .who_are_we h2 {
-text-align: justify;
+text-align: left;
     background: url(images/manlogo.png) no-repeat;
-    padding-left: 33px;
+    padding-left: 60px;
+    padding-top: 10px;
     padding-bottom: 10px;
-    display: inline;
-    
 }
 h2 {
 color: black;
     font-size: 30px;
     font-family: 'Source Sans Pro';
-    padding-left: 35px;
+    padding-left: 20px;
+    object-position:left;
 }
  p.main {
     padding: 30px;
@@ -101,4 +101,53 @@ p.one {
 .container video {
 width: 360px;
     height: 261px;
+    /* insert overlay and video icon */
+}
+.ourservices h3{
+    font-family:'Source Sans Pro';
+    text-align: center;
+    text-transform: uppercase;
+    /* Insert ellipse immage below h3 */
+}
+.graphicdesign h4 {
+   text-align: left;
+    position: relative;
+    background: url(images/paintbrushlogo.png) no-repeat;
+    padding-left: 65px;
+    padding-top: 35px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font: 700 17.78px 'Source Sans Pro';
+    color: #acd373;
+     /* need to format header and paragraph for this section, resize mobile logo in photoshop*/
+}
+.mobileapp h5{
+     text-align:justify;
+    position: relative;
+    background: url(images/mobilelogo.png) no-repeat;
+    padding-left: 35px;
+    padding-top: 35px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font: 700 17.78px 'Source Sans Pro';
+    color: #acd373;
+     /* need to format header and paragraph for this section, resize mobile logo in photoshop*/
+    /* need to format header and paragraph for this section*/
+}
+p4 p5 p6 {
+    font-family: 'Source Sans Pro';
+        font-size: 16.51px;
+    text-align: justify;
+    position: relative;
+}
+.webdesign h6{
+     text-align: left;
+    background: url(images/monitiorlogo.png) no-repeat;
+    padding-left: 60px;
+    padding-top: 44px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+    font: 700 17.78px 'Source Sans Pro';
+    color: #acd373;
+ /* need to format header and paragraph for this section*/
 }
